--- a/src/views/Home.fxml
+++ b/src/views/Home.fxml
@@ -2,13 +2,11 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.*?>
-<Pane xmlns:fx="http://javafx.com/fxml/1" id="AnchorPane" fx:id="contentArea" maxHeight="-Infinity" maxWidth="-Infinity"
-      minHeight="-Infinity" minWidth="-Infinity" prefHeight="374.0" prefWidth="827.0"
-      style="-fx-background-color: #F0F0F0;" xmlns="http://javafx.com/javafx/8"
-      fx:controller="controllers.HomeController">
+<?import javafx.scene.text.Font?>
+
+<Pane id="AnchorPane" fx:id="contentArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="374.0" prefWidth="827.0" style="-fx-background-color: #F0F0F0;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
    <children>
       <Label layoutX="67.0" layoutY="48.0" text="Experience the Magic of G6" textFill="#f6ae00">
          <font>
@@ -25,15 +23,12 @@
             <Font name="Roboto Condensed Light" size="20.0" />
          </font>
       </Label>
-       <JFXButton buttonType="RAISED" layoutX="313.0" layoutY="246.0" maxHeight="-Infinity" maxWidth="-Infinity"
-                  minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#feedMe" prefHeight="35.0"
-                  prefWidth="200.0" ripplerFill="WHITE"
-                  style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Feed Me">
+       <JFXButton buttonType="RAISED" layoutX="313.0" layoutY="246.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#feedMe" prefHeight="35.0" prefWidth="200.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Feed Me">
          <font>
             <Font name="Roboto Condensed Bold" size="16.0" />
          </font>
       </JFXButton>
-      <JFXTextField alignment="TOP_CENTER" layoutX="336.0" layoutY="195.0" promptText="E1 4NS" />
+      <JFXTextField alignment="TOP_CENTER" layoutX="336.0" layoutY="195.0" onAction="#postcode_text" promptText="E1 4NS" />
       <Label layoutX="14.0" layoutY="334.0" text="Search By:" textFill="#616161">
          <font>
             <Font name="Roboto Condensed Light" size="20.0" />
