--- a/src/views/BusinessView.fxml
+++ b/src/views/BusinessView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.shape.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
@@ -17,23 +16,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="parent" prefHeight="437.0" prefWidth="1198.0" stylesheets="@../css/stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RestaurantPageController">
+<BorderPane fx:id="parent" prefHeight="600.0" prefWidth="1052.0" stylesheets="@../css/stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BuisnessViewController">
    <left>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="sidepane" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="25.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="200.0" ripplerFill="WHITE" styleClass="buttons" text="Menu" textFill="WHITE" underline="true">
-               <font>
-                  <Font name="Roboto Condensed" size="14.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../icons/Home.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="25.0" layoutY="64.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="200.0" ripplerFill="WHITE" styleClass="buttons" text="Reviews" textFill="WHITE" underline="true">
+            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="25.0" layoutY="57.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#menu" prefHeight="50.0" prefWidth="200.0" ripplerFill="WHITE" styleClass="buttons" text="Menu" textFill="WHITE" underline="true">
                <font>
                   <Font name="Roboto Condensed" size="14.0" />
                </font>
@@ -45,21 +32,24 @@
                   </ImageView>
                </graphic>
             </JFXButton>
+            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="25.0" layoutY="107.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#orders" prefHeight="50.0" prefWidth="200.0" ripplerFill="WHITE" styleClass="buttons" text="Orders" textFill="WHITE" underline="true">
+               <font>
+                  <Font name="Roboto Condensed" size="14.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../icons/Deliver.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <Label fx:id="businessName" layoutY="15.0" prefHeight="17.0" prefWidth="224.0" text="Label" />
          </children>
       </Pane>
    </left>
    <center>
-      <Pane fx:id="contentArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="390.0" prefWidth="826.0" BorderPane.alignment="CENTER">
-         <children>
-             <VBox fx:id="content" prefHeight="392.0" prefWidth="827.0">
-               <children>
-                  <Label fx:id="businessName" alignment="CENTER" prefWidth="827.0" text="Name">
-                     <font>
-                        <Font size="28.0" />
-                     </font>
-                  </Label>
-               </children></VBox>
-         </children></Pane>
+      <Pane fx:id="contentArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="826.0" BorderPane.alignment="CENTER" />
    </center>
    <top>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="52.0" prefWidth="1051.0">
@@ -76,6 +66,9 @@
                   <RowConstraints />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Log Out" wrappingWidth="52.2479248046875" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+               </children>
             </GridPane>
             <ImageView fitHeight="39.0" fitWidth="222.0" layoutX="18.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -85,19 +78,4 @@
          </children>
       </Pane>
    </top>
-   <right>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="sidepane" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Label alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="201.0" text="Your Order" textFill="WHITE">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-         </children>
-      </Pane>
-   </right>
 </BorderPane>
